--- a/scss/partials/_mobile.scss
+++ b/scss/partials/_mobile.scss
@@ -1,7 +1,7 @@
 @media (max-width: 600px) {
   #init-view {
     width: 100%;
-    height: 475px;
+    height: 500px;
     background-color: $blue;
     padding-top: 5px;
     #header {
@@ -35,6 +35,8 @@
       }
     }
     #menu-items {
+      position: absolute;
+      width: 95.75%;
       .menu-item {
         height: 50px;
         line-height: 50px;
@@ -53,12 +55,10 @@
       align-items: center;
       #top-ship {
         transform: scale(2);
-        -webkit-filter: invert(15%);
-        filter: invert(15%);
       }
       p {
         width: 85%;
-        margin-top: 35px;
+        margin-top: 60px;
         font-family: $font;
         font-size: 18px;
         text-align: center;
