--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,9 +29,7 @@
         #init-view #header #menu #menu-btn {
           transform: scale(0.75); }
     #init-view #menu-items {
-      display: none;
-      position: absolute;
-      width: 95.75%; }
+      width: 100%; }
       #init-view #menu-items .menu-item {
         height: 50px;
         line-height: 50px;
@@ -149,3 +147,9 @@
 
 .bold {
   font-weight: 600; }
+
+.hidden {
+  display: none; }
+
+.shown {
+  display: block; }
