--- a/scss/partials/_mobile.scss
+++ b/scss/partials/_mobile.scss
@@ -1,4 +1,10 @@
 @media (max-width: 600px) {
+  body {
+    margin: 0;
+  }
+  .hidden {
+    display: none;
+  }
   #init-view {
     width: 100%;
     height: 500px;
@@ -24,6 +30,9 @@
           font-family: $font;
           color: $blue;
           margin: 0 -10%;
+        }
+        p {
+          display: none;
         }
       }
       #menu {
@@ -85,7 +94,7 @@
   #deals {
     height: 550px;
     .moon {
-      margin: 14% auto;
+      margin: 50px auto;
       display: flex;
       flex-direction: column;
       justify-content: space-around;
@@ -133,6 +142,9 @@
         width: 70%;
         font-size: 13px;
       }
+    }
+    #ten-g {
+      display: none;
     }
   }
   #more {
