--- a/scss/partials/_tablet.scss
+++ b/scss/partials/_tablet.scss
@@ -20,6 +20,7 @@
       justify-content: center;
       align-items: center;
       background-image: url('img/header_bg.svg');
+      background-size: cover;
       background-color: $blue;
 
       #ufo-star {
@@ -110,47 +111,61 @@
     }
   }
   #deals {
-    height: 550px;
+    height: 450px;
     .moon {
       margin: 50px auto;
-      display: flex;
-      flex-flow: column wrap;
-      justify-content: center;
-      align-items: center;
       border-radius: 5px;
       width: 85%;
-      height: 225px;
+      height: 175px;
       background-color: $light-grey;
       font-family: $font;
       color: white;
       .to-moon {
-        margin: 75px auto 0 auto;
-        line-height: 50px;
+        position: relative;
+        top: 30%;
+        left: 57.5%;
         font-weight: 600;
-        font-size: 18px;
+        font-size: 16px;
       }
       .emboss-top {
-        display: none;
+        position: relative;
+        top: -38px;
+        height: 100%;
+        width: 2px;
+        background-color: #444444;
+        border: 0;
       }
       .emboss-bottom {
-        display: none;
+        position: relative;
+        top: -222px;
+        left: 1px;
+        height: 100%;
+        width: 1px;
+        background-color: #999999;
+        border: 0;
       }
       a {
-        font-size: 48px;
+        position: relative;
+        top: -355px;
+        left: 10%;
+        font-size: 54px;
         font-family: helvetica;
       }
       .underline {
-        margin: 0 auto 50px auto;
+        position: relative;
+        top: -360px;
+        left: -25%;
         height: 5px;
         background-color: white;
         border: 0;
-        width: 25%;
+        width: 35%;
       }
       p {
-        margin: -10px auto 10px auto;
-        width: 50%;
+        top: -400px;
+        left: 57.5%;
+        position: relative;
+        width: 35%;
         font-size: 14px;
-        order: 1;
       }
     }
     #thirty-2 {
@@ -184,6 +199,7 @@
     display: flex;
     justify-content: center;
     p {
+      margin-top: 25px;
       width: 70%;
       color: $light-grey;
       font-size: 10px;
