--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,6 +2,7 @@ $dark-grey : #333333;
 $blue : #99CCCC;
 $light-grey : #666666;
 $font : "Open Sans", sans-serif;
+$background : url('../img/header_bg.svg');
 
 @import "partials/mobile";
 @import "partials/tablet";
