--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,4 @@
-@media (max-width: 600px) {
+@media (max-width: 599px) {
   body {
     margin: 0; }
   .hidden {
@@ -130,6 +130,8 @@
     flex-direction: row;
     justify-content: center;
     margin-bottom: 0; }
+    #more .more-wide {
+      display: none; }
     #more p {
       font-family: "Open Sans", sans-serif;
       color: white; }
@@ -150,7 +152,7 @@
       font-size: 10px;
       font-family: "Open Sans", sans-serif; } }
 
-@media (min-width: 601px) and (max-width: 965px) {
+@media (min-width: 600px) and (max-width: 964px) {
   body {
     margin: 0;
     font-family: "Open Sans", sans-serif; }
@@ -283,17 +285,197 @@
       #deals .moon .underline {
         position: relative;
         top: -360px;
-        left: -25%;
+        left: -27.5%;
         height: 5px;
         background-color: white;
         border: 0;
-        width: 35%; }
+        width: 30%; }
       #deals .moon p {
         top: -400px;
         left: 57.5%;
         position: relative;
         width: 35%;
         font-size: 14px; }
+    #deals #thirty-2 {
+      display: none; }
+  #more {
+    height: 50px;
+    line-height: 17px;
+    width: 100%;
+    background-color: #99CCCC;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 0; }
+    #more .more-wide {
+      display: none; }
+    #more p {
+      font-family: "Open Sans", sans-serif;
+      color: white; }
+    #more #arrow {
+      transform: scale(0.5);
+      margin: 0 -50px 0 -50px; }
+  #creds {
+    margin-top: 0;
+    height: 200px;
+    width: 100%;
+    background-color: #333333;
+    text-align: center;
+    display: flex;
+    justify-content: center; }
+    #creds p {
+      margin-top: 25px;
+      width: 85%;
+      color: #666666;
+      font-size: 14px;
+      font-family: "Open Sans", sans-serif; } }
+
+@media (min-width: 965px) and (max-width: 1099px) {
+  body {
+    margin: 0;
+    font-family: "Open Sans", sans-serif; }
+  .hidden {
+    display: block; }
+  #init-view {
+    width: 100%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    #init-view #header {
+      width: 100%;
+      height: 200px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-image: url("../img/header_bg.svg");
+      background-color: #99CCCC; }
+      #init-view #header #ufo-star {
+        display: flex;
+        flex-direction: column;
+        align-items: center; }
+        #init-view #header #ufo-star #top-logo {
+          transform: scale(1.25);
+          margin: -10px auto;
+          -webkit-filter: invert(100%);
+          filter: invert(100%); }
+        #init-view #header #ufo-star #strfx {
+          display: flex;
+          flex-direction: row;
+          text-align: center;
+          line-height: 16px;
+          color: #333333; }
+          #init-view #header #ufo-star #strfx h3 {
+            margin: 0;
+            font-size: 24px; }
+          #init-view #header #ufo-star #strfx p {
+            margin: 0;
+            font-size: 24px; }
+    #init-view #menu-items {
+      display: flex;
+      justify-content: center;
+      width: 90%;
+      height: 50px;
+      line-height: 50px;
+      background-color: #333333;
+      border-radius: 5px;
+      margin: -17.5px auto; }
+      #init-view #menu-items .menu-item {
+        margin: 0 2.5%;
+        color: #99CCCC;
+        font-size: 16px; }
+        #init-view #menu-items .menu-item:hover {
+          font-weight: 600;
+          color: white; }
+  #info {
+    margin-top: 45px;
+    height: 300px;
+    width: 90%;
+    background-color: #99CCCC;
+    border-radius: 5px; }
+    #info #top-ship {
+      position: relative;
+      left: 75%;
+      top: 25px;
+      transform: scale(3);
+      -webkit-filter: invert(20%);
+      filter: invert(20%); }
+    #info p {
+      position: relative;
+      top: -30%;
+      left: 5%;
+      width: 55%;
+      font-family: "Open Sans", sans-serif;
+      font-size: 28px;
+      text-align: left;
+      color: #333333; }
+    #info #find-more {
+      position: relative;
+      left: 67.5%;
+      top: -62.5%;
+      width: 25%;
+      height: 60px;
+      line-height: 60px;
+      background-color: #666666;
+      font-family: "Open Sans", sans-serif;
+      color: white;
+      text-align: center;
+      font-size: 20px; }
+      #info #find-more:hover {
+        background-color: #444444; }
+    #info hr {
+      position: relative;
+      left: 30%;
+      top: -65.5%;
+      background-color: #333333;
+      border: 0;
+      height: 5px;
+      width: 25%; }
+  #deals {
+    height: 400px; }
+    #deals .moon {
+      display: inline-block;
+      margin: 50px 0 50px 25px;
+      border-radius: 5px;
+      width: 29%;
+      height: 300px;
+      background-color: #666666;
+      text-align: center;
+      font-family: "Open Sans", sans-serif;
+      color: white; }
+      #deals .moon:hover {
+        background-color: #444444; }
+      #deals .moon .to-moon {
+        margin: 10px auto 0 auto;
+        line-height: 50px;
+        font-weight: 600;
+        font-size: 18px;
+        width: 100%; }
+      #deals .moon .emboss-top {
+        height: 2px;
+        width: 100%;
+        background-color: #444444;
+        border: 0; }
+      #deals .moon .emboss-bottom {
+        margin: -9px 0 45px 0;
+        height: 1px;
+        width: 100%;
+        background-color: #999999;
+        border: 0; }
+      #deals .moon a {
+        font-size: 54px;
+        font-family: helvetica; }
+      #deals .moon .underline {
+        margin: 0 auto 45px auto;
+        height: 5px;
+        background-color: white;
+        border: 0;
+        width: 55%; }
+      #deals .moon p {
+        margin: -10px auto 10px auto;
+        width: 70%;
+        font-size: 13px; }
     #deals #thirty-2 {
       display: none; }
   #more {
