--- a/scss/partials/_tablet.scss
+++ b/scss/partials/_tablet.scss
@@ -1,4 +1,4 @@
-@media (min-width: 601px) and (max-width: 965px) {
+@media (min-width: 600px) and (max-width: 964px) {
   body {
     margin: 0;
     font-family: $font;
@@ -153,11 +153,11 @@
       .underline {
         position: relative;
         top: -360px;
-        left: -25%;
+        left: -27.5%;
         height: 5px;
         background-color: white;
         border: 0;
-        width: 35%;
+        width: 30%;
       }
       p {
         top: -400px;
@@ -180,6 +180,9 @@
     flex-direction: row;
     justify-content: center;
     margin-bottom: 0;
+    .more-wide {
+      display: none;
+    }
     p {
       font-family: $font;
       color: white;
