doing wide view now

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,6 +8,7 @@ $background : url('../img/header_bg.svg');
 @import "partials/mobile";
 @import "partials/tablet";
 @import "partials/desktop";
+@import "partials/large_monitor";
 
 .thin {
   font-weight: 300;
