--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -433,12 +433,14 @@
       height: 5px;
       width: 25%; }
   #deals {
-    height: 400px; }
+    height: 150px; }
     #deals .moon {
+      position: relative;
+      top: 75px;
       display: inline-block;
-      margin: 50px 0 50px 25px;
+      margin: 0 0 50px 50px;
       border-radius: 5px;
-      width: 29%;
+      width: 26.5%;
       height: 300px;
       background-color: #666666;
       text-align: center;
@@ -479,22 +481,62 @@
     #deals #thirty-2 {
       display: none; }
   #more {
-    height: 50px;
+    position: relative;
+    left: 66%;
+    top: -90px;
+    height: 300px;
+    margin: 0 0 0 22.5px;
     line-height: 17px;
-    width: 100%;
-    background-color: #99CCCC;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-bottom: 0; }
-    #more p {
+    width: 26.5%;
+    background-color: #666666;
+    margin-bottom: 0;
+    border-radius: 5px;
+    color: white; }
+    #more .emboss-top {
+      position: relative;
+      top: 55px;
+      height: 2px;
+      width: 100%;
+      background-color: #444444;
+      border: 0; }
+    #more .emboss-bottom {
+      position: relative;
+      top: 56px;
+      margin: -9px 0 45px 0;
+      height: 1px;
+      width: 100%;
+      background-color: #999999;
+      border: 0; }
+    #more p.bold {
+      position: relative;
+      top: 11px;
+      left: 0%;
       font-family: "Open Sans", sans-serif;
-      color: white; }
+      font-size: 20px;
+      font-weight: 300;
+      height: 37px;
+      padding-top: 25px;
+      border-radius: 0 0 5px 5px;
+      text-align: left;
+      padding-left: 65px;
+      margin: 0 0 -160px 0; }
+      #more p.bold:hover {
+        background-color: #444444; }
+    #more p.more-wide {
+      text-align: center;
+      position: relative;
+      top: 30px; }
+    #more a {
+      font-size: 36px;
+      position: relative;
+      top: 35px;
+      left: 22.5%; }
     #more #arrow {
-      transform: scale(0.5);
-      margin: 0 -50px 0 -50px; }
+      transform: scale(0.15);
+      position: relative;
+      left: 22.5%; }
   #creds {
-    margin-top: 0;
+    margin-top: -10px;
     height: 200px;
     width: 100%;
     background-color: #333333;
