--- a/scss/partials/_desktop.scss
+++ b/scss/partials/_desktop.scss
@@ -120,12 +120,14 @@
     }
   }
   #deals {
-    height: 400px;
+    height: 150px;
     .moon {
+      position: relative;
+      top: 75px;
       display: inline-block;
-      margin: 50px 0 50px 25px;
+      margin: 0 0 50px 50px;
       border-radius: 5px;
-      width: 29%;
+      width: 26.5%;
       height: 300px;
       background-color: $light-grey;
       text-align: center;
@@ -176,25 +178,70 @@
     }
   }
   #more {
-    height: 50px;
+    position: relative;
+    left: 66%;
+    top: -90px;
+    height: 300px;
+    margin: 0 0 0 22.5px;
     line-height: 17px;
-    width: 100%;
-    background-color: $blue;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    width: 26.5%;
+    background-color: $light-grey;
     margin-bottom: 0;
-    p {
+    border-radius: 5px;
+    color: white;
+    .emboss-top {
+      position: relative;
+      top: 55px;
+      height: 2px;
+      width: 100%;
+      background-color: #444444;
+      border: 0;
+    }
+    .emboss-bottom {
+      position: relative;
+      top: 56px;
+      margin: -9px 0 45px 0;
+      height: 1px;
+      width: 100%;
+      background-color: #999999;
+      border: 0;
+    }
+    p.bold {
+      position: relative;
+      top: 11px;
+      left: 0%;
       font-family: $font;
-      color: white;
+      font-size: 20px;
+      font-weight: 300;
+      height: 37px;
+      padding-top: 25px;
+      border-radius: 0 0 5px 5px;;
+      text-align: left;
+      padding-left: 65px;
+      margin: 0 0 -160px 0;
+      &:hover {
+        background-color: $hover-grey;
+      }
+    }
+    p.more-wide {
+      text-align: center;
+      position: relative;
+      top: 30px;
+    }
+    a {
+      font-size: 36px;
+      position: relative;
+      top: 35px;
+      left: 22.5%;
     }
     #arrow {
-      transform: scale(0.5);
-      margin: 0 -50px 0 -50px;
+      transform: scale(0.15);
+      position: relative;
+      left: 22.5%;
     }
   }
   #creds {
-    margin-top: 0;
+    margin-top: -10px;
     height: 200px;
     width: 100%;
     background-color: $dark-grey;
