--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -519,7 +519,7 @@
       border-radius: 0 0 5px 5px;
       text-align: left;
       padding-left: 65px;
-      margin: 0 0 -160px 0; }
+      margin: 0 0 -56.5% 0; }
       #more p.bold:hover {
         background-color: #444444; }
     #more p.more-wide {
@@ -535,6 +535,227 @@
       transform: scale(0.15);
       position: relative;
       left: 22.5%; }
+  #creds {
+    margin-top: -10px;
+    height: 200px;
+    width: 100%;
+    background-color: #333333;
+    text-align: center;
+    display: flex;
+    justify-content: center; }
+    #creds p {
+      margin-top: 25px;
+      width: 85%;
+      color: #666666;
+      font-size: 14px;
+      font-family: "Open Sans", sans-serif; } }
+
+@media (min-width: 1100px) {
+  body {
+    margin: 0;
+    font-family: "Open Sans", sans-serif; }
+  .hidden {
+    display: block; }
+  #init-view {
+    width: 100%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    #init-view #header {
+      width: 100%;
+      height: 250px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-image: url("../img/header_bg.svg");
+      background-color: #99CCCC; }
+      #init-view #header #ufo-star {
+        display: flex;
+        flex-direction: column;
+        align-items: center; }
+        #init-view #header #ufo-star #top-logo {
+          transform: scale(1.25);
+          margin: -10px auto;
+          -webkit-filter: invert(100%);
+          filter: invert(100%); }
+        #init-view #header #ufo-star #strfx {
+          display: flex;
+          flex-direction: row;
+          text-align: center;
+          line-height: 16px;
+          color: #333333; }
+          #init-view #header #ufo-star #strfx h3 {
+            margin: 0;
+            font-size: 24px; }
+          #init-view #header #ufo-star #strfx p {
+            margin: 0;
+            font-size: 24px; }
+    #init-view #menu-items {
+      display: flex;
+      justify-content: center;
+      width: 75%;
+      height: 50px;
+      line-height: 50px;
+      background-color: #333333;
+      border-radius: 5px;
+      margin: -17.5px auto; }
+      #init-view #menu-items .menu-item {
+        margin: 0 2.5%;
+        color: #99CCCC;
+        font-size: 16px; }
+        #init-view #menu-items .menu-item:hover {
+          font-weight: 600;
+          color: white; }
+  #info {
+    margin-top: 45px;
+    height: 300px;
+    width: 75%;
+    background-color: #99CCCC;
+    border-radius: 5px; }
+    #info #top-ship {
+      position: relative;
+      left: 75%;
+      top: 25px;
+      transform: scale(3);
+      -webkit-filter: invert(20%);
+      filter: invert(20%); }
+    #info p {
+      position: relative;
+      top: -30%;
+      left: 5%;
+      width: 55%;
+      font-family: "Open Sans", sans-serif;
+      font-size: 28px;
+      text-align: left;
+      color: #333333; }
+    #info #find-more {
+      position: relative;
+      left: 67.5%;
+      top: -50%;
+      width: 25%;
+      height: 60px;
+      line-height: 60px;
+      background-color: #666666;
+      font-family: "Open Sans", sans-serif;
+      color: white;
+      text-align: center;
+      font-size: 20px; }
+      #info #find-more:hover {
+        background-color: #444444; }
+    #info hr {
+      position: relative;
+      left: 30%;
+      top: -54%;
+      background-color: #333333;
+      border: 0;
+      height: 5px;
+      width: 25%; }
+  #deals {
+    height: 150px;
+    padding-left: 7.75%; }
+    #deals .moon {
+      position: relative;
+      top: 70px;
+      display: inline-block;
+      margin: 0 0 50px 5%;
+      border-radius: 5px;
+      width: 22.5%;
+      height: 300px;
+      background-color: #666666;
+      text-align: center;
+      font-family: "Open Sans", sans-serif;
+      color: white; }
+      #deals .moon:hover {
+        background-color: #444444; }
+      #deals .moon .to-moon {
+        margin: 10px auto 0 auto;
+        line-height: 50px;
+        font-weight: 600;
+        font-size: 18px;
+        width: 100%; }
+      #deals .moon .emboss-top {
+        height: 2px;
+        width: 100%;
+        background-color: #444444;
+        border: 0; }
+      #deals .moon .emboss-bottom {
+        margin: -9px 0 45px 0;
+        height: 1px;
+        width: 100%;
+        background-color: #999999;
+        border: 0; }
+      #deals .moon a {
+        font-size: 54px;
+        font-family: helvetica; }
+      #deals .moon .underline {
+        margin: 0 auto 45px auto;
+        height: 5px;
+        background-color: white;
+        border: 0;
+        width: 55%; }
+      #deals .moon p {
+        margin: -10px auto 10px auto;
+        width: 70%;
+        font-size: 13px; }
+    #deals #thirty-2 {
+      display: none; }
+  #more {
+    position: relative;
+    left: 65%;
+    top: -95px;
+    height: 300px;
+    margin: 0 0 0 0;
+    line-height: 17px;
+    width: 22.5%;
+    background-color: #666666;
+    margin-bottom: 0;
+    border-radius: 5px;
+    color: white; }
+    #more .emboss-top {
+      position: relative;
+      top: 55px;
+      height: 2px;
+      width: 100%;
+      background-color: #444444;
+      border: 0; }
+    #more .emboss-bottom {
+      position: relative;
+      top: 56px;
+      margin: -9px 0 45px 0;
+      height: 1px;
+      width: 100%;
+      background-color: #999999;
+      border: 0; }
+    #more p.bold {
+      position: relative;
+      top: 11px;
+      left: 0%;
+      font-family: "Open Sans", sans-serif;
+      font-size: 20px;
+      font-weight: 300;
+      height: 37px;
+      padding-top: 25px;
+      border-radius: 0 0 5px 5px;
+      text-align: left;
+      padding-left: 25%;
+      margin: 0 0 -55% 0; }
+      #more p.bold:hover {
+        background-color: #444444; }
+    #more p.more-wide {
+      text-align: center;
+      position: relative;
+      top: 30px; }
+    #more a {
+      font-size: 36px;
+      position: relative;
+      top: 40px;
+      left: 30%; }
+    #more #arrow {
+      transform: scale(0.1);
+      position: relative;
+      left: 25%; }
   #creds {
     margin-top: -10px;
     height: 200px;
