--- a/scss/partials/_desktop.scss
+++ b/scss/partials/_desktop.scss
@@ -218,7 +218,7 @@
       border-radius: 0 0 5px 5px;;
       text-align: left;
       padding-left: 65px;
-      margin: 0 0 -160px 0;
+      margin: 0 0 -56.5% 0;
       &:hover {
         background-color: $hover-grey;
       }
